[package]
name = "tb_row_derive"
version = "1.0.1"
edition = "2021"
repository = "https://github.com/cheolgyu/tb_row"
readme = "README.md"
description = "Change struct serialization to tuple. Specifies the order of tuples."
keywords = ["tb", "row"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["raw_value"] }
